--- a/src/Style/style.css
+++ b/src/Style/style.css
@@ -5,6 +5,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 html {
@@ -142,7 +144,7 @@ a:hover {
   background: #fff;
   width: 100%;
   height: 64px;
-  z-index: 10;
+  z-index: 4;
 }
 
 .header_container ul li {
@@ -175,7 +177,9 @@ a:hover {
 }
 
 .hero_container {
-  background-image: url("../assets/hero.svg");
+  background-image: url("../assets/hero.gif");
+  background-repeat: no-repeat;
+  background-size: cover;
   margin-top: 64px;
   padding-top: 100px;
 }
@@ -232,7 +236,7 @@ a:hover {
 }
 
 .threeCards_container .inner_threeCards_container {
-  padding: 96px 0rem 58px 0rem;
+  padding: 96px 0rem 64px 0rem;
 }
 
 .services_container {
@@ -281,8 +285,29 @@ a:hover {
   position: relative;
 }
 
+.services_container .single_service .icon_para {
+  display: none;
+}
+
+.services_container .single_service .icon_title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.services_container .single_service:hover .icon_para {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.services_container .single_service:hover .icon_title {
+  display: none;
+}
+
 .services_container .single_service .icon_title,
 .services_container .single_service .icon_para {
+  padding: 0px 24px;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -299,12 +324,12 @@ a:hover {
 }
 
 .started_container {
-  margin-top: 56px;
+  padding: 40px 0px;
   background: #1f2937;
   -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 16px;
-  height: 232px;
+  max-height: 242px;
   overflow: hidden;
 }
 
@@ -457,7 +482,7 @@ a:hover {
 }
 
 .support_container p {
-  font-weight: 500;
+  font-weight: 400;
   line-height: 26px;
 }
 
@@ -592,6 +617,27 @@ a:hover {
   outline: none;
 }
 
+.contact_container .login__error__message {
+  position: absolute;
+  right: 0%;
+  font-size: 12px;
+  color: #ff3838 !important;
+  font-weight: 600;
+}
+
+.contact_container textarea + .login__error__message {
+  bottom: -12px;
+  margin-bottom: 0px;
+}
+
+.contact_container .success {
+  color: #019761;
+}
+
+.contact_container .error_field {
+  border: 2px solid #ff3838 !important;
+}
+
 .support_banner_Container {
   background-image: url("../assets/support.png");
   background-position: center;
@@ -691,11 +737,13 @@ a:hover {
 }
 
 .technical_assistance_container .inner_technical_assistance_container .single_cta_container {
+  min-height: 102px;
   background: #1f2937;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
   border-radius: 16px;
   padding: 24px 0px;
+  width: 100%;
 }
 
 .technical_assistance_container .text_head {
@@ -706,9 +754,96 @@ a:hover {
   color: #1676be;
 }
 
+/* ==================== SideBAR STYLING END ======================== */
+.SideBarContainer {
+  margin-top: 64px;
+  position: fixed;
+  right: 0%;
+  left: 0%;
+  bottom: 0%;
+  color: white;
+  background: -webkit-gradient(linear, left top, left bottom, from(#121924), color-stop(700%, rgba(18, 25, 36, 0)));
+  background: linear-gradient(180deg, #121924 0%, rgba(18, 25, 36, 0) 700%);
+  height: 100vh;
+  z-index: 2;
+  width: 100%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  overflow: hidden;
+}
+
+.SideBarContainer .logo {
+  position: absolute;
+  top: 1%;
+  left: 3%;
+}
+
+.SideBarContainer .logo img {
+  width: 120px;
+}
+
+.SideBarContainer .get_started button {
+  background: #ff8811;
+  border-radius: 6px;
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 16px;
+  height: 36px;
+  width: 120px;
+  border: none;
+}
+
+.SideBarContainer ul {
+  margin-top: 56px;
+  padding-left: 0rem;
+  margin-bottom: 0px;
+}
+
+.SideBarContainer ul li {
+  margin-bottom: 32px;
+  position: relative;
+  list-style: none;
+  cursor: pointer;
+  text-align: center;
+}
+
+.SideBarContainer ul li a {
+  color: #fff;
+  text-decoration: none;
+  position: relative;
+  padding-bottom: 5px;
+  font-size: 14px;
+}
+
+.SideBarContainer ul li .activeNav::after {
+  content: "";
+  position: absolute;
+  left: 0%;
+  bottom: 0%;
+  height: 10%;
+  width: 100%;
+  background-color: #007bbc;
+  border-radius: 5px;
+}
+
+.CrossBTn {
+  position: absolute;
+  top: 7%;
+  right: 6.5%;
+  cursor: pointer;
+  height: 25px;
+}
+
+/* ==================== SideBAR STYLING END ======================== */
 .stack_competition_container {
+  margin-bottom: 56px;
   padding: 80px 0px;
   background: #f3f4f6;
+}
+
+.stack_competition_container .table_container {
+  margin-top: 40px;
 }
 
 .stack_competition_container .table_container .left_side div {
@@ -717,7 +852,7 @@ a:hover {
   font-size: 14px;
   font-weight: 400;
   border-bottom: 1px solid #e5e7eb;
-  padding: 0.6rem 0rem;
+  padding: 1.219rem 0rem;
 }
 
 .stack_competition_container .table_container .left_side div:nth-last-child(1) {
@@ -727,15 +862,13 @@ a:hover {
 .stack_competition_container .table_container .right_side_head {
   background: #fff;
   border-radius: 16px 16px 0px 0px;
-  -webkit-box-shadow: 0px -1px -1px rgba(0, 0, 0, 0.1), 0px -1px -1px rgba(0, 0, 0, 0.06);
-          box-shadow: 0px -1px -1px rgba(0, 0, 0, 0.1), 0px -1px -1px rgba(0, 0, 0, 0.06);
 }
 
 .stack_competition_container .table_container .right_side_head div {
   color: #111827;
   font-size: 14px;
   font-weight: 500;
-  padding: 0.6rem 0rem;
+  padding: 1.219rem 0rem;
 }
 
 .stack_competition_container .table_container .right_side_head div img {
@@ -750,7 +883,7 @@ a:hover {
 }
 
 .stack_competition_container .table_container .right_side_body div {
-  padding: 0.5rem 0rem;
+  padding: 1.12rem 0rem;
 }
 
 .stack_competition_container .table_container .right_side_body div img {
@@ -764,6 +897,64 @@ a:hover {
 
 .stack_competition_container .table_container .right_side_body:nth-last-child(1) div:nth-last-child(3) {
   border-radius: 0px 0px 0px 16px;
+}
+
+.stack_up_slider_container {
+  margin-top: 40px;
+}
+
+.stack_up_slider_container .slider_single {
+  padding: 1rem 1.5rem;
+}
+
+.stack_up_slider_container .slider_single .head_text {
+  font-size: 14px;
+  line-height: 20px;
+  color: #374151;
+  font-weight: 400;
+}
+
+.stack_up_slider_container .single_table_inner_head {
+  padding: 0px 0px 0px 12px;
+}
+
+.stack_up_slider_container .single_table_inner_head img {
+  padding: 20px 0px;
+}
+
+.stack_up_slider_container .single_table_inner .single_table_inner_body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.stack_up_slider_container .single_table_inner .single_table_inner_body div {
+  width: 60px;
+}
+
+.stack_up_slider_container .slick-dots {
+  bottom: -10px;
+}
+
+.stack_up_slider_container .slick-dots li {
+  width: 5px;
+  height: 5px;
+}
+
+.stack_up_slider_container .slick-dots li.slick-active button:before {
+  color: #9ca3af;
+}
+
+.stack_up_slider_container .slick-dots li button:before {
+  color: #adadad;
+  font-size: 10px;
+}
+
+.stack_up_slider_container .slick-arrow.slick-next {
+  display: none !important;
 }
 
 @media screen and (min-width: 575px) {
@@ -787,9 +978,6 @@ a:hover {
   .support_container p {
     font-weight: 400;
   }
-  .serviceBanner_container {
-    margin-top: 7rem;
-  }
   .innerServiceContainer h1 {
     font-size: 1.8rem;
   }
@@ -799,9 +987,6 @@ a:hover {
   }
   .serviceBanner_container .innerServiceContainer .cont:nth-child(2) {
     width: 100%;
-  }
-  .serviceBanner_container {
-    margin-top: 9rem;
   }
   .support_container a {
     width: 100%;
@@ -822,20 +1007,26 @@ a:hover {
 
 @media screen and (max-width: 767px) {
   .header_container {
-    height: 72px;
+    height: 64px;
   }
   .hero_container {
-    padding-top: 133px;
+    padding-top: 100px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: right;
+    margin-top: 64px;
   }
   .hero_container h1 {
-    font-size: 1.875rem;
-    line-height: 30px;
+    font-size: 48px;
+    line-height: 48px;
+    font-weight: 900;
   }
   .started_container {
     height: 100%;
   }
   .started_container .first {
     margin: 0px 0px;
+    padding: 40px 48px;
   }
   .started_container .first button {
     width: 100%;
@@ -849,11 +1040,12 @@ a:hover {
   .contact_container a {
     width: 100%;
   }
-  .threeCards_container {
-    padding: 12px 0rem 58px 0rem;
-  }
   .services_container {
     padding: 4rem 0rem 56px 0rem;
+  }
+  .services_container p {
+    font-size: 14px;
+    font-weight: 400;
   }
   .contact_container {
     height: 100%;
@@ -864,9 +1056,6 @@ a:hover {
   .contact_container .mtContact:nth-child(2) {
     margin-top: 20px;
   }
-  .header_container ul li {
-    margin: 0px 10px;
-  }
   .footer_container ul li {
     margin-left: 28px;
   }
@@ -875,15 +1064,31 @@ a:hover {
   }
   .started_container img {
     position: absolute;
-    top: -25%;
-    right: -22%;
-    height: 323px;
+    top: 0%;
+    right: -15%;
+    min-height: 240px;
   }
   .started_container .first {
     width: 70%;
   }
-  .innerServiceContainer h1 {
-    font-size: 1.6rem;
+  .support_banner_Container .innerServiceContainer h1 {
+    font-size: 32px;
+    line-height: 32px;
+    font-weight: 900;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .support_banner_Container .innerServiceContainer p {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+  }
+  .serviceBanner_container .innerServiceContainer p {
+    font-size: 16px;
+    line-height: 26px;
+    color: #d1d5db;
+    font-weight: 400;
   }
   .about_head {
     font-size: 1.6rem;
@@ -893,9 +1098,6 @@ a:hover {
   }
   .btn_cont_submit {
     width: 100%;
-  }
-  .contact_container button {
-    width: 100% !important;
   }
   .about_list_container {
     max-width: 635px;
@@ -911,6 +1113,49 @@ a:hover {
     border-top: 1px solid #e5e7eb;
     margin-top: 40px;
     padding-top: 40px;
+  }
+  .stack_competition_container .single_table_tablet {
+    margin-top: 40px;
+  }
+  .stack_competition_container .single_table_tablet .head_text {
+    color: #374151;
+    line-height: 20px;
+    font-size: 14px;
+    font-weight: 400;
+    margin-bottom: 16px;
+  }
+  .stack_competition_container .single_table_inner {
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
+            box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
+    background: #ffffff;
+    border-radius: 16px;
+  }
+  .stack_competition_container .single_table_inner .single_table_inner_head img {
+    max-width: 108px;
+    width: 100%;
+  }
+  .stack_competition_container .single_table_inner .single_table_inner_head div p {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+    color: #111827;
+    padding: 20px 0px;
+  }
+  .stack_competition_container .single_table_inner .single_table_inner_body div {
+    padding: 20px 0px;
+  }
+  .stack_competition_container .single_table_inner .single_table_inner_body div:nth-child(1) {
+    border-radius: 0px 0px 0px 16px;
+  }
+  .stack_competition_container .single_table_inner .single_table_inner_body div:nth-last-child(1) {
+    border-radius: 0px 0px 16px 0px;
+  }
+  .stack_competition_container .single_table_inner .single_table_inner_body img {
+    height: 20px;
+    width: 20px;
+  }
+  .support_container .support_inner {
+    padding: 0px 32px;
   }
 }
 
@@ -930,33 +1175,116 @@ a:hover {
 }
 
 @media screen and (max-width: 575px) {
-  .hero_container {
-    padding-top: 154px;
+  .hero_container h1 {
+    font-size: 32px;
+    line-height: 32px;
   }
   .hero_container .btn_container {
+    padding: 0px 5px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-  .hero_container .btn_container a:nth-child(1) button,
-  .hero_container .btn_container a:nth-child(2) button {
-    width: 100%;
-  }
-  .hero_container .btn_container a:nth-child(2) button {
-    margin-top: 12px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .header_container {
-    height: 95px;
+    height: 64px;
+  }
+  .started_container .first {
+    padding: 32px 24px;
+  }
+  .started_container .first .h4 {
+    font-size: 30px;
+    line-height: 30px;
   }
   .services_container button {
     width: 100%;
   }
   .started_container .first .btn_cont button {
     width: 100%;
+  }
+  .innerServiceContainer h1 {
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 32px;
+  }
+  .service_body_container .service_card .card_bg {
+    height: 160px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    border-radius: 16px 16px 0px 0px;
+  }
+  .service_body_container .service_card .card_body p {
+    font-size: 14px;
+  }
+  .support_banner_Container .innerServiceContainer h1,
+  .support_banner_Container .innerServiceContainer p {
+    width: 100%;
+  }
+  .support_banner_Container {
+    background-size: cover;
+  }
+  .support_container .support_inner {
+    padding: 0px 16px;
+  }
+  .about_banner_container .innerAboutContainer h1 {
+    font-size: 32px;
+    line-height: 32px;
+  }
+  .about_banner_container {
+    height: 620px;
+    background-size: cover;
+  }
+  .about_banner_container .innerAboutContainer {
+    padding-top: 100px;
+    padding-bottom: 198px;
+  }
+  .about_list_container {
+    margin-top: -8rem;
+  }
+  .about_list_container .row_list {
+    padding: 4px 24px;
+  }
+  .single_about_list {
+    padding: 16px 0px;
+    border-bottom: 1px solid #e5e7eb;
+  }
+  .single_about_list:nth-last-child(1) {
+    border-bottom: none;
+  }
+  .contact_banner_Container {
+    height: 320px;
+    background-size: cover;
+  }
+  .contact_container textarea {
+    height: 331px;
+  }
+  .contact_container label {
+    font-size: 14px;
+  }
+  .technical_assistance_container
+.inner_technical_assistance_container
+.single_cta_container {
+    padding: 18px 0px;
+  }
+  .serviceBanner_container {
+    height: 514px;
+  }
+  .service_body_container {
+    margin-top: -5.5rem;
+  }
+  .stack_competition_container
+.single_table_inner
+.single_table_inner_head
+img {
+    max-width: 83.2px;
+  }
+  .stack_competition_container
+.single_table_inner
+.single_table_inner_body
+div:nth-child(1) {
+    border-radius: 0px 16px 0px 0px;
   }
 }
 /*# sourceMappingURL=style.css.map */
