--- a/src/Style/style.scss
+++ b/src/Style/style.scss
@@ -5,6 +5,7 @@
 	margin: 0%;
 	box-sizing: border-box;
 	font-family: "Roboto", sans-serif;
+	transition: 0.4s;
 }
 
 // GLOBAL CLASSES START
@@ -147,7 +148,7 @@ a:hover {
 	background: #fff;
 	width: 100%;
 	height: 64px;
-	z-index: 10;
+	z-index: 4;
 
 	ul {
 		li {
@@ -181,7 +182,9 @@ a:hover {
 
 // HERO START
 .hero_container {
-	background-image: url("../assets/hero.svg");
+	background-image: url("../assets/hero.gif");
+	background-repeat: no-repeat;
+	background-size: cover;
 	margin-top: 64px;
 	padding-top: 100px;
 
@@ -237,7 +240,7 @@ a:hover {
 	background: linear-gradient(360deg, #121924 0%, rgba(18, 25, 36, 0) 100%);
 
 	.inner_threeCards_container {
-		padding: 96px 0rem 58px 0rem;
+		padding: 96px 0rem 64px 0rem;
 	}
 }
 // THREE CARDS END
@@ -286,8 +289,27 @@ a:hover {
 	.single_service {
 		position: relative;
 
+		.icon_para {
+			display: none;
+		}
+
+		.icon_title {
+			display: flex;
+		}
+
+		&:hover {
+			.icon_para {
+				display: flex;
+			}
+
+			.icon_title {
+				display: none;
+			}
+		}
+
 		.icon_title,
 		.icon_para {
+			padding: 0px 24px;
 			position: absolute;
 			left: 50%;
 			top: 50%;
@@ -305,11 +327,11 @@ a:hover {
 
 // STARTED START
 .started_container {
-	margin-top: 56px;
+	padding: 40px 0px;
 	background: #1f2937;
 	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 	border-radius: 16px;
-	height: 232px;
+	max-height: 242px;
 	overflow: hidden;
 
 	img {
@@ -462,7 +484,7 @@ a:hover {
 	}
 
 	p {
-		font-weight: 500;
+		font-weight: 400;
 		line-height: 26px;
 
 		// a {
@@ -601,6 +623,27 @@ a:hover {
 			outline: none;
 		}
 	}
+
+	.login__error__message {
+		position: absolute;
+		right: 0%;
+		font-size: 12px;
+		color: rgb(255, 56, 56) !important;
+		font-weight: 600;
+	}
+
+	textarea + .login__error__message {
+		bottom: -12px;
+		margin-bottom: 0px;
+	}
+
+	.success {
+		color: #019761;
+	}
+
+	.error_field {
+		border: 2px solid rgb(255, 56, 56) !important;
+	}
 }
 // CONTACT BODY END
 
@@ -695,11 +738,13 @@ a:hover {
 		margin-right: auto;
 
 		.single_cta_container {
+			min-height: 102px;
 			background: #1f2937;
 			box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
 				0px 1px 2px rgba(0, 0, 0, 0.06);
 			border-radius: 16px;
 			padding: 24px 0px;
+			width: 100%;
 		}
 	}
 
@@ -713,12 +758,96 @@ a:hover {
 }
 // TECHNICAL ASSISTANCE END
 
+/* ==================== SideBAR STYLING END ======================== */
+.SideBarContainer {
+	margin-top: 64px;
+	position: fixed;
+	right: 0%;
+	left: 0%;
+	bottom: 0%;
+	color: white;
+	background: linear-gradient(180deg, #121924 0%, rgba(18, 25, 36, 0) 700%);
+	height: 100vh;
+	z-index: 2;
+	width: 100%;
+	transition: 0.5s;
+	overflow: hidden;
+
+	.logo {
+		position: absolute;
+		top: 1%;
+		left: 3%;
+
+		img {
+			width: 120px;
+		}
+	}
+
+	.get_started {
+		button {
+			background: #ff8811;
+			border-radius: 6px;
+			color: #ffffff;
+			font-size: 14px;
+			font-weight: 500;
+			line-height: 16px;
+			height: 36px;
+			width: 120px;
+			border: none;
+		}
+	}
+}
+
+.SideBarContainer ul {
+	margin-top: 56px;
+	padding-left: 0rem;
+	margin-bottom: 0px;
+}
+
+.SideBarContainer ul li {
+	margin-bottom: 32px;
+	position: relative;
+	list-style: none;
+	cursor: pointer;
+	text-align: center;
+
+	a {
+		color: #fff;
+		text-decoration: none;
+		position: relative;
+		padding-bottom: 5px;
+		font-size: 14px;
+	}
+	.activeNav::after {
+		content: "";
+		position: absolute;
+		left: 0%;
+		bottom: 0%;
+		height: 10%;
+		width: 100%;
+		background-color: #007bbc;
+		border-radius: 5px;
+	}
+}
+
+.CrossBTn {
+	position: absolute;
+	top: 7%;
+	right: 6.5%;
+	cursor: pointer;
+	height: 25px;
+}
+/* ==================== SideBAR STYLING END ======================== */
+
 // STACK UP TABLE START
 .stack_competition_container {
+	margin-bottom: 56px;
 	padding: 80px 0px;
 	background: #f3f4f6;
 
 	.table_container {
+		margin-top: 40px;
+
 		.left_side {
 			div {
 				color: #374151;
@@ -726,7 +855,7 @@ a:hover {
 				font-size: 14px;
 				font-weight: 400;
 				border-bottom: 1px solid #e5e7eb;
-				padding: 0.6rem 0rem;
+				padding: 1.219rem 0rem;
 			}
 
 			div:nth-last-child(1) {
@@ -737,14 +866,12 @@ a:hover {
 		.right_side_head {
 			background: #fff;
 			border-radius: 16px 16px 0px 0px;
-			box-shadow: 0px -1px -1px rgba(0, 0, 0, 0.1),
-				0px -1px -1px rgba(0, 0, 0, 0.06);
 
 			div {
 				color: #111827;
 				font-size: 14px;
 				font-weight: 500;
-				padding: 0.6rem 0rem;
+				padding: 1.219rem 0rem;
 
 				img {
 					max-width: 90px;
@@ -759,7 +886,7 @@ a:hover {
 				0px -1px -1px rgba(0, 0, 0, 0.06);
 
 			div {
-				padding: 0.5rem 0rem;
+				padding: 1.12rem 0rem;
 
 				img {
 					height: 16px;
@@ -776,6 +903,59 @@ a:hover {
 				}
 			}
 		}
+	}
+}
+
+.stack_up_slider_container {
+	margin-top: 40px;
+
+	.slider_single {
+		padding: 1rem 1.5rem;
+
+		.head_text {
+			font-size: 14px;
+			line-height: 20px;
+			color: #374151;
+			font-weight: 400;
+		}
+	}
+
+	.single_table_inner_head {
+		padding: 0px 0px 0px 12px;
+
+		img {
+			padding: 20px 0px;
+		}
+	}
+
+	.single_table_inner .single_table_inner_body {
+		display: flex;
+		justify-content: end;
+	}
+
+	.single_table_inner .single_table_inner_body div {
+		width: 60px;
+	}
+
+	.slick-dots {
+		bottom: -10px;
+
+		li {
+			width: 5px;
+			height: 5px;
+		}
+	}
+
+	.slick-dots li.slick-active button:before {
+		color: #9ca3af;
+	}
+	.slick-dots li button:before {
+		color: #adadad;
+		font-size: 10px;
+	}
+
+	.slick-arrow.slick-next {
+		display: none !important;
 	}
 }
 // STACK UP TABLE END
@@ -802,9 +982,6 @@ a:hover {
 	.support_container p {
 		font-weight: 400;
 	}
-	.serviceBanner_container {
-		margin-top: 7rem;
-	}
 	.innerServiceContainer {
 		h1 {
 			font-size: 1.8rem;
@@ -816,9 +993,6 @@ a:hover {
 	}
 	.serviceBanner_container .innerServiceContainer .cont:nth-child(2) {
 		width: 100%;
-	}
-	.serviceBanner_container {
-		margin-top: 9rem;
 	}
 	.support_container a {
 		width: 100%;
@@ -840,14 +1014,19 @@ a:hover {
 }
 @media screen and (max-width: 767px) {
 	.header_container {
-		height: 72px;
+		height: 64px;
 	}
 	.hero_container {
-		padding-top: 133px;
+		padding-top: 100px;
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: right;
+		margin-top: 64px;
 
 		h1 {
-			font-size: 1.875rem;
-			line-height: 30px;
+			font-size: 48px;
+			line-height: 48px;
+			font-weight: 900;
 		}
 	}
 	.started_container {
@@ -855,6 +1034,7 @@ a:hover {
 	}
 	.started_container .first {
 		margin: 0px 0px;
+		padding: 40px 48px;
 	}
 	.started_container .first button {
 		width: 100%;
@@ -877,11 +1057,13 @@ a:hover {
 	.contact_container a {
 		width: 100%;
 	}
-	.threeCards_container {
-		padding: 12px 0rem 58px 0rem;
-	}
 	.services_container {
 		padding: 4rem 0rem 56px 0rem;
+
+		p {
+			font-size: 14px;
+			font-weight: 400;
+		}
 	}
 	.contact_container {
 		height: 100%;
@@ -892,9 +1074,6 @@ a:hover {
 	.contact_container .mtContact:nth-child(2) {
 		margin-top: 20px;
 	}
-	.header_container ul li {
-		margin: 0px 10px;
-	}
 	.footer_container ul li {
 		margin-left: 28px;
 	}
@@ -903,15 +1082,27 @@ a:hover {
 	}
 	.started_container img {
 		position: absolute;
-		top: -25%;
-		right: -22%;
-		height: 323px;
+		top: 0%;
+		right: -15%;
+		min-height: 240px;
 	}
 	.started_container .first {
 		width: 70%;
 	}
-	.innerServiceContainer h1 {
-		font-size: 1.6rem;
+	.support_banner_Container .innerServiceContainer h1 {
+		font-size: 32px;
+		line-height: 32px;
+		font-weight: 900;
+		width: max-content;
+	}
+	.support_banner_Container .innerServiceContainer p {
+		width: max-content;
+	}
+	.serviceBanner_container .innerServiceContainer p {
+		font-size: 16px;
+		line-height: 26px;
+		color: #d1d5db;
+		font-weight: 400;
 	}
 	.about_head {
 		font-size: 1.6rem;
@@ -921,9 +1112,6 @@ a:hover {
 	}
 	.btn_cont_submit {
 		width: 100%;
-	}
-	.contact_container button {
-		width: 100% !important;
 	}
 	.about_list_container {
 		max-width: 635px;
@@ -939,6 +1127,65 @@ a:hover {
 		border-top: 1px solid #e5e7eb;
 		margin-top: 40px;
 		padding-top: 40px;
+	}
+	.stack_competition_container {
+		.single_table_tablet {
+			margin-top: 40px;
+
+			.head_text {
+				color: #374151;
+				line-height: 20px;
+				font-size: 14px;
+				font-weight: 400;
+				margin-bottom: 16px;
+			}
+		}
+
+		.single_table_inner {
+			box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1),
+				0px 1px 2px rgba(0, 0, 0, 0.06);
+			background: #ffffff;
+			border-radius: 16px;
+
+			.single_table_inner_head {
+				img {
+					max-width: 108px;
+					width: 100%;
+				}
+
+				div p {
+					font-weight: 500;
+					font-size: 14px;
+					line-height: 20px;
+					color: #111827;
+					padding: 20px 0px;
+				}
+			}
+
+			.single_table_inner_body {
+				div {
+					padding: 20px 0px;
+
+					&:nth-child(1) {
+						border-radius: 0px 0px 0px 16px;
+					}
+					&:nth-last-child(1) {
+						border-radius: 0px 0px 16px 0px;
+					}
+				}
+
+				img {
+					height: 20px;
+					width: 20px;
+				}
+			}
+		}
+	}
+
+	.support_container {
+		.support_inner {
+			padding: 0px 32px;
+		}
 	}
 }
 @media screen and (max-width: 668px) {
@@ -957,29 +1204,116 @@ a:hover {
 }
 @media screen and (max-width: 575px) {
 	.hero_container {
-		padding-top: 154px;
+		h1 {
+			font-size: 32px;
+			line-height: 32px;
+		}
 
 		.btn_container {
+			padding: 0px 5px;
 			display: flex;
-			flex-direction: column;
-		}
-
-		.btn_container a:nth-child(1) button,
-		.btn_container a:nth-child(2) button {
-			width: 100%;
-		}
-		.btn_container a:nth-child(2) button {
-			margin-top: 12px;
+			justify-content: space-between;
 		}
 	}
 	.header_container {
-		height: 95px;
+		height: 64px;
+	}
+	.started_container .first {
+		padding: 32px 24px;
+
+		.h4 {
+			font-size: 30px;
+			line-height: 30px;
+		}
 	}
 	.services_container button {
 		width: 100%;
 	}
 	.started_container .first .btn_cont button {
 		width: 100%;
+	}
+	.innerServiceContainer h1 {
+		font-weight: 900;
+		font-size: 32px;
+		line-height: 32px;
+	}
+	.service_body_container .service_card .card_bg {
+		height: 160px;
+		object-fit: cover;
+		border-radius: 16px 16px 0px 0px;
+	}
+	.service_body_container .service_card .card_body p {
+		font-size: 14px;
+	}
+	.support_banner_Container .innerServiceContainer h1,
+	.support_banner_Container .innerServiceContainer p {
+		width: 100%;
+	}
+	.support_banner_Container {
+		background-size: cover;
+	}
+	.support_container .support_inner {
+		padding: 0px 16px;
+	}
+	.about_banner_container .innerAboutContainer h1 {
+		font-size: 32px;
+		line-height: 32px;
+	}
+	.about_banner_container {
+		height: 620px;
+		background-size: cover;
+
+		.innerAboutContainer {
+			padding-top: 100px;
+			padding-bottom: 198px;
+		}
+	}
+	.about_list_container {
+		margin-top: -8rem;
+	}
+	.about_list_container .row_list {
+		padding: 4px 24px;
+	}
+	.single_about_list {
+		padding: 16px 0px;
+		border-bottom: 1px solid #e5e7eb;
+
+		&:nth-last-child(1) {
+			border-bottom: none;
+		}
+	}
+	.contact_banner_Container {
+		height: 320px;
+		background-size: cover;
+	}
+	.contact_container textarea {
+		height: 331px;
+	}
+	.contact_container label {
+		font-size: 14px;
+	}
+	.technical_assistance_container
+		.inner_technical_assistance_container
+		.single_cta_container {
+		padding: 18px 0px;
+	}
+	.serviceBanner_container {
+		height: 514px;
+	}
+	.service_body_container {
+		margin-top: -5.5rem;
+	}
+	.stack_competition_container
+		.single_table_inner
+		.single_table_inner_head
+		img {
+		max-width: 83.2px;
+	}
+	.stack_competition_container
+		.single_table_inner
+		.single_table_inner_body
+		div:nth-child(1) {
+		border-radius: 0px 16px 0px 0px;
 	}
 }
 // MEDIA QUERIES END
